[DOCS] Added emojis to introduction

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,27 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementación de una red neuronal convolucional con NumPy para clasificación de imágenes : MNIST\n",
+    "_Implementación de una red neuronal convolucional con NumPy para clasificación de imágenes : MNIST_ 🖼️🧠\n",
+    "=========================================================================================================\n",
     "\n",
-    "## Introducción\n",
+    "Introducción\n",
+    "------------\n",
     "\n",
-    "En este documento se detalla el proceso completo para construir, entrenar y evaluar una red neuronal convolucional (CNN) utilizando el conjunto de datos MNIST. Este conjunto de datos es ampliamente reconocido en el campo del aprendizaje automático y la visión por computadora, ya que consiste en 70,000 imágenes de dígitos escritos a mano del 0 al 9, cada una etiquetada con su correspondiente número.\n",
+    "En este documento se detalla el proceso completo para construir, entrenar y evaluar una red neuronal convolucional (CNN) utilizando el conjunto de datos MNIST. Este conjunto de datos es ampliamente reconocido en el campo del aprendizaje automático y la visión por computadora, ya que consiste en 70,000 imágenes de dígitos escritos a mano del 0 al 9, cada una etiquetada con su correspondiente número. 🔢\n",
     "\n",
     "### Objetivo\n",
     "\n",
     "El objetivo principal es desarrollar un modelo de CNN que pueda aprender automáticamente a reconocer y clasificar correctamente los dígitos representados en las imágenes de MNIST. Este proceso implica:\n",
     "\n",
-    "- **Preprocesamiento de Datos:** Las imágenes se normalizan y se preparan para ser alimentadas al modelo.\n",
-    "  \n",
-    "- **Definición de la Arquitectura de la Red Neuronal:** Se establece la estructura de la red neuronal convolucional, incluyendo capas convolucionales, de pooling y completamente conectadas.\n",
+    "*   **Preprocesamiento de Datos:** Las imágenes se normalizan y se preparan para ser alimentadas al modelo. 📊\n",
+    "    \n",
+    "*   **Definición de la Arquitectura de la Red Neuronal:** Se establece la estructura de la red neuronal convolucional, incluyendo capas convolucionales, de pooling y completamente conectadas. 🏗️\n",
+    "    \n",
+    "*   **Entrenamiento del Modelo:** Se ajustan los pesos de la red utilizando el algoritmo de retropropagación (backpropagation) con un método de optimización para minimizar una función de pérdida. ⚙️\n",
+    "    \n",
+    "*   **Evaluación del Rendimiento:** Se evalúa la precisión del modelo utilizando un conjunto de datos de prueba separado y se analizan los resultados obtenidos. ✅\n",
+    "    \n",
     "\n",
-    "- **Entrenamiento del Modelo:** Se ajustan los pesos de la red utilizando el algoritmo de retropropagación (backpropagation) con un método de optimización para minimizar una función de pérdida.\n",
+    "Este proyecto no solo muestra cómo implementar una red neuronal para reconocer dígitos, sino que también ofrece una visión general de los pasos necesarios para construir y entrenar modelos de aprendizaje automático en problemas de clasificación de imágenes. 📈\n",
     "\n",
-    "- **Evaluación del Rendimiento:** Se evalúa la precisión del modelo utilizando un conjunto de datos de prueba separado y se analizan los resultados obtenidos.\n",
-    "\n",
-    "Este proyecto no solo muestra cómo implementar una red neuronal para reconocer dígitos, sino que también ofrece una visión general de los pasos necesarios para construir y entrenar modelos de aprendizaje automático en problemas de clasificación de imágenes.\n",
-    "\n",
-    "A lo largo del documento, se explicarán detalladamente cada uno de estos pasos, junto con las decisiones de diseño y los resultados obtenidos durante el proceso de desarrollo del modelo de CNN para MNIST.\n"
+    "A lo largo del documento, se explicarán detalladamente cada uno de estos pasos, junto con las decisiones de diseño y los resultados obtenidos durante el proceso de desarrollo del modelo de CNN para MNIST. 📚✨"
    ]
   },
   {
